objects/ASI_FOC_Request_Item__c.object
<CustomObject>
    <description>used for PR China FOC</description>
    <fields>
        <fullName>ASI_CRM_A_D_or_A_P__c</fullName>
        <label>A&amp;D or A&amp;P</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Code__c</fullName>
        <formula>ASI_CRM_Plan_Line_Item__r.ASI_MFM_A_C_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Quantity_9L__c</fullName>
        <formula>ASI_FOC_Actual_Quantity_Bottle__c * ASI_FOC_SKU__r.ASI_HK_CRM_Std_Bottle_Size__c / 900</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Quantity (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment_Remarks__c</fullName>
        <label>Adjustment Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Bottle_Value__c</fullName>
        <formula>ASI_FOC_Issued_Qty__c *  ASI_CRM_Min_SP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bottle Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Buy_every_9L__c</fullName>
        <label>Buy every 9L</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Carry_Over_Bottle__c</fullName>
        <label>Carry Over (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Code__c</fullName>
        <formula>ASI_CRM_Plan_Line_Item__r.ASI_MFM_Customer_Name__r.ASI_HK_CRM_Customer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Name__c</fullName>
        <formula>ASI_CRM_Plan_Line_Item__r.ASI_MFM_Customer_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Address__c</fullName>
        <label>Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_Tel__c</fullName>
        <label>Delivery Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_To_Code__c</fullName>
        <formula>ASI_CRM_Delivery_To__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery To Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Delivery_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Item, ASI CRM TW POSM Request Item</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Item, ASI CRM TW POSM Request Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Request Items (Delivery To)</relationshipLabel>
        <relationshipName>Request_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Duty_Per_Bottle__c</fullName>
        <label>Duty Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ETL_Update_Date_Time__c</fullName>
        <label>ETL Update Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOB_Per_Bottle__c</fullName>
        <label>FOB Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FOC_No__c</fullName>
        <label>FOC No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GLReasonCode__c</fullName>
        <label>GL Reason Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Give_Bottle__c</fullName>
        <label>Give (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Handling_Cost_Per_Bottle__c</fullName>
        <label>Handling Cost Per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_IGC_Cost_Per_case__c</fullName>
        <label>IGC Cost Per case</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Incentive_Ratio__c</fullName>
        <label>Incentive Ratio</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDECOA__c</fullName>
        <label>JDE COA</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Order_Number__c</fullName>
        <label>JDE Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Order_Type_Code__c</fullName>
        <label>JDE Order Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Update_Date_Time__c</fullName>
        <label>JDE Update Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Min_SP__c</fullName>
        <label>Min SP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_OfftakeCode__c</fullName>
        <label>Offtake Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Quantity_9L__c</fullName>
        <label>Offtake Quantity (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Quantity__c</fullName>
        <label>Offtake Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outstanding_Qty__c</fullName>
        <formula>IF(NOT(ISBLANK( ASI_CRM_Shipped_Qty__c )),ASI_FOC_Request_Quantity_Bottle__c -  ASI_CRM_Shipped_Qty__c, NULL)</formula>
        <label>Outstanding Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan_Line_Description__c</fullName>
        <formula>ASI_CRM_Plan_Line_Item__r.ASI_MFM_List_Item_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Line Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Line Item</label>
        <referenceTo>ASI_MFM_Plan_Line_Item__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Detail</label>
        <referenceTo>ASI_HK_CRM_Promotion_Detail__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion_Mechanic_Text__c</fullName>
        <formula>&quot;Buy every &quot; &amp; 
IF(ASI_CRM_Buy_every_9L__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; Text(ASI_CRM_Buy_every_9L__c)
&amp; &quot; 9L Give &quot; &amp; 
IF(ASI_CRM_Give_Bottle__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; Text(ASI_CRM_Give_Bottle__c)
&amp; &quot; Bottles&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Mechanic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>ASI_HK_CRM_Promotion__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Receiver__c</fullName>
        <label>Receiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Reimbursement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reimbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Status__c</fullName>
        <formula>TEXT(ASI_FOC_Request_Order__r.ASI_FOC_Request_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_A_G_Code__c</fullName>
        <label>A/G Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Adjustment__c</fullName>
        <formula>IF( 
	ISBLANK(ASI_FOC_Actual_Quantity_Bottle__c ) ,	null,  
		IF(
			ASI_FOC_Actual_Quantity_Bottle__c &gt; ASI_FOC_Request_Quantity_Bottle__c, ASI_FOC_Actual_Quantity_Bottle__c -  ASI_FOC_Request_Quantity_Bottle__c, null 
		) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjustment (Extra Quantity)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Amount__c</fullName>
        <formula>if ( AND (CONTAINS(ASI_FOC_Request_Order__r.RecordType.DeveloperName, &apos;ASI_CRM_SG_FOC&apos;),  ISPICKVAL(ASI_CRM_SG_FOC_Type__c , &apos;Sales Incentive&apos;) ) ,
ASI_CRM_SG_Unit_Price__c *  ASI_FOC_Actual_Quantity_Bottle__c ,
ASI_CRM_SG_Unit_Price__c *  ASI_FOC_Request_Quantity_Bottle__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Available_Quantity__c</fullName>
        <label>Available Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_FOC_Type__c</fullName>
        <label>FOC Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Margin</fullName>
                </value>
                <value>
                    <fullName>Cash Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Management Incentive</fullName>
                </value>
                <value>
                    <fullName>Sales Incentive</fullName>
                </value>
                <value>
                    <fullName>Adhoc Promotion/Sponsorship</fullName>
                </value>
                <value>
                    <fullName>7th Moon Promotion</fullName>
                </value>
                <value>
                    <fullName>7th Moon Functions</fullName>
                </value>
                <value>
                    <fullName>Signages New - TOT</fullName>
                </value>
                <value>
                    <fullName>Signages Recurrent - TOT / Advertising Spot</fullName>
                </value>
                <value>
                    <fullName>Signages New - MOT</fullName>
                </value>
                <value>
                    <fullName>Sampling</fullName>
                </value>
                <value>
                    <fullName>Commando Activity</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
                <value>
                    <fullName>GMA Purchases</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Advertising Spot</fullName>
                </value>
                <value>
                    <fullName>Contract Sponsorship/Target Incentive</fullName>
                </value>
                <value>
                    <fullName>Replacement Bottle</fullName>
                </value>
                <value>
                    <fullName>Gift for Trade/Business Associate (CNY)</fullName>
                </value>
                <value>
                    <fullName>Sampling to end consumer (marketing)</fullName>
                </value>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Corporate Public Relation</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Company functions (marketing)</fullName>
                </value>
                <value>
                    <fullName>Contest/Prize (marketing)</fullName>
                </value>
                <value>
                    <fullName>Direct marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Code__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_MFM_SKU_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selling_Price_Btl_PRS_WS__c</fullName>
        <label>Selling Price Per Bottle (PRS - WS)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Selling_Price_Btl_WS_On_Trade__c</fullName>
        <label>Selling Price Per Bottle (WS - On Trade)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SetupCode__c</fullName>
        <label>Setup Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Shipped_Qty__c</fullName>
        <label>Total Shipped Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_Brand_Code__c</fullName>
        <formula>ASI_CRM_Plan_Line_Item__r.ASI_MFM_Sub_Brand_Code_Only__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand_Description__c</fullName>
        <formula>ASI_CRM_Plan_Line_Item__r.ASI_MFM_Sub_brand_Code__r.ASI_MFM_Sub_brand_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Amount__c</fullName>
        <formula>ASI_FOC_Request_Quantity_Bottle__c * ASI_FOC_Unit_Cost_PC_BT__c</formula>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Outlet_Code__c</fullName>
        <formula>ASI_CRM_Target_Outlet__r.ASI_HK_CRM_JDE_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Outlet Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Target_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Item, ASI CRM TW POSM Request Item</value>
            </filterItems>
            <filterItems>
                <field>Account.ASI_HK_CRM_Inactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Item, ASI CRM TW POSM Request Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>ASI_CRM_Wholesaler</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Actual_Quantity_Bottle__c</fullName>
        <label>Actual Quantity (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Allow_for_Editing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow for Editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Approval_In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Brand_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Brand_Director_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brand Director Approval Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Brand_Director_Approval_Status__c</fullName>
        <label>Brand Director Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Brand__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.Name</formula>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_Packing_Description__c</fullName>
        <label>Packing Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_SKU_Chinese_Description__c</fullName>
        <label>SKU Chinese Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_CN_SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Cancel_Qty__c</fullName>
        <label>Cancel Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Cancel_Quantity_PC_BT__c</fullName>
        <label>Cancel Quantity (PC/BT)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ETL_Actual_Quantity__c</fullName>
        <formula>IF ( ISBLANK( ASI_FOC_Actual_Quantity_Bottle__c ), ASI_FOC_Request_Quantity_Bottle__c ,
MIN( ASI_FOC_Request_Quantity_Bottle__c , ASI_FOC_Actual_Quantity_Bottle__c ))</formula>
        <label>Actual Quantity (ETL Use)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ETL_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Email_Notification_Template__c</fullName>
        <label>Email Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Free_Good_Cost__c</fullName>
        <label>Free Good Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Free_Goods_Actual_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Free Goods Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT(Id,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Is_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Issued_Qty__c</fullName>
        <label>Issued Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Original_Request_Quantity_PC_BT__c</fullName>
        <label>Original Request Quantity (PC/BT)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Packing_Description__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_FOC_Packing_Description__c</formula>
        <label>Packing Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Preview_Image__c</fullName>
        <formula>IF(ISBLANK(ASI_FOC_SKU_Image_URL__c), ASI_FOC_SKU_Image_File_Name__c, IMAGE(ASI_FOC_SKU_Image_URL__c, ASI_FOC_SKU_Image_File_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Quantity_Available_PC__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_HK_CRM_Available_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Available (PC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Reason__c</fullName>
        <label>Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Remark__c</fullName>
        <label>Remark</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Order__c</fullName>
        <label>Request Order</label>
        <referenceTo>ASI_FOC_Free_Goods_Request__c</referenceTo>
        <relationshipLabel>Request Order Details</relationshipLabel>
        <relationshipName>ASI_FOC_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Quantity_Bottle__c</fullName>
        <label>Request Quantity (Bottle)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Request_Quantity_PC__c</fullName>
        <label>Request Quantity (PC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SKU_Chinese_Description__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_FOC_SKU_Chinese_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU Chinese Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SKU_Description__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_MFM_SKU_Description__c</formula>
        <label>SKU Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SKU_Image_File_Name__c</fullName>
        <label>SKU Image File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SKU_Image_URL__c</fullName>
        <label>SKU Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SKU__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SKU</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 6) OR (3 AND 4 AND 6) OR 5</booleanFilter>
            <errorMessage>SKU: Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW FOC Request Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.ASI_HK_CRM_IsPOSProduct__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>ASI CRM TW POSM Request Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.ASI_HK_CRM_IsPOSProduct__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>ASI CRM TW FOC Request Item, ASI CRM TW POSM Request Item</value>
            </filterItems>
            <filterItems>
                <field>ASI_MFM_SKU_Code__c.ASI_HK_CRM_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>ASI_FOC_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_SO_Actual_Extended_Cost__c</fullName>
        <label>SO Actual Extended Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sub_brand__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_MFM_Sub_brand__r.Name</formula>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Clone_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Clone Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_InputBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_InputBrand</label>
        <referenceTo>ASI_MFM_Brand__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>ASI_FOC_Request_Item_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_InputSubBrand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_InputSubBrand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Request Items</relationshipLabel>
        <relationshipName>ASI_FOC_Request_Item_Inputs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Sys_Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Sys_Unique Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_FOC_Total_SKU_List_Price__c</fullName>
        <formula>ASI_FOC_SKU__r.ASI_FOC_List_Price__c *  ASI_FOC_Actual_Quantity_Bottle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total SKU List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_FOC_Unit_Cost_PC_BT__c</fullName>
        <label>Unit Cost (PC/BT)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ASI_SG_CRM_SYS_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Changed</label>
        <type>Checkbox</type>
    </fields>
    <label>Request Item</label>
    <listViews>
        <fullName>ASI_CRM_TW_FOC_Request_Line</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Request_Order__c</columns>
        <columns>ASI_CRM_Plan_Line_Item__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_FOC_SKU__c</columns>
        <columns>ASI_FOC_Request_Quantity_Bottle__c</columns>
        <columns>ASI_CRM_Shipped_Qty__c</columns>
        <columns>ASI_CRM_Outstanding_Qty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Request_Item__c.ASI_CRM_TW_FOC_Request_Item</value>
        </filters>
        <label>TW FOC Request Line</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_POSM_Request_Line</fullName>
        <columns>NAME</columns>
        <columns>ASI_FOC_Request_Order__c</columns>
        <columns>ASI_CRM_Target_Outlet__c</columns>
        <columns>ASI_CRM_Delivery_To__c</columns>
        <columns>ASI_FOC_SKU__c</columns>
        <columns>ASI_FOC_Request_Quantity_Bottle__c</columns>
        <columns>ASI_CRM_Shipped_Qty__c</columns>
        <columns>ASI_CRM_Outstanding_Qty__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_FOC_Request_Item__c.ASI_CRM_TW_POSM_Request_Item</value>
        </filters>
        <label>TW POSM Request Line</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>LN-{000000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_FOC_Request_Item</fullName>
        <active>true</active>
        <label>ASI CRM TW FOC Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_POSM_Request_Item</fullName>
        <active>true</active>
        <label>ASI CRM TW POSM Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_POSM_Request_Item</fullName>
        <active>true</active>
        <label>CN POSM Request Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_Request_Item</fullName>
        <active>true</active>
        <description>used by FOC</description>
        <label>CN FOC Request Item</label>
    </recordTypes>
</CustomObject>